src/test/test-models/bad/data_index/non_data_index5.stan
parameters {
  real y[3];

}
transformed parameters {
  matrix[2, size(y)] m;

}
